Update package.json to include project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ProjectGenarator",
+  "name": "project-generator",
   "version": "1.0.0",
   "description": "",
   "main": "generator.js",
